# vauth

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/models/: creds.rs  login_response.rs  mod.rs  profile.rs  vclient_builder.rs  vprofile.rs  vserver_builder.rs
src/utils/: error.rs  helpers.rs  mod.rs
tests/: http_test.rs
