[package]
name = "vauth"
version = "1.1.0"
edition = "2021"
description = "A simple Veeam API authentication library"
authors = ["Ed Howard"]
license = "MIT"
repository = "https://github.com/shapedthought/vauth"
documentation = "https://docs.rs/vauth/0.1.0/vauth/"
homepage = "https://github.com/shapedthought/vauth"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
regex = "1.7.1"
dotenvy = "0.15.7"
