[package]
name = "vauth"
version = "2.0.0"
edition = "2021"
description = "A simple Veeam API authentication library"
authors = ["Ed Howard"]
license = "MIT"
repository = "https://github.com/shapedthought/vauth"
documentation = "https://docs.rs/vauth/0.1.0/vauth/"
homepage = "https://github.com/shapedthought/vauth"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
regex = "1.11.1"
dotenvy = "0.15.7"
once_cell = "1.21.3"
